Inserting product and linking with supplier